--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="photo-contact">
       <img src="img/Foto MFZ.JPG" alt="Foto MFZ" class="photo"/>
       <h1>Contact Me</h1>
-      <a href="https://myaccount.google.com/profile">
+      <a href="https://myaccount.google.com/profile" target="_blank">
       <button class="contact-btn">Email</button>
     </a>
-    <a href="https://wa.link/zoo7ce">
+    <a href="https://wa.link/zoo7ce" target="_blank">
       <button class="contact-btn">WhatsApp</button>
     </a>
     </div>
